# circle-keeper-bot

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: send_due_reminders.yml  test.yml
alembic/: env.py  script.py.mako
alembic/versions/: 20260609_0001_initial.py  20260614_0639_1ebf3d0e7ee4_change_description.py  20260615_0002_users_timezone_server_default.py
app/: config.py  logging.py  main.py
app/bot/handlers/: __init__.py  admin.py  birthdays.py  children.py  errors.py  help.py  import_export.py  language.py  people.py  privacy.py  relationships.py  settings.py  start.py
app/bot/keyboards/: __init__.py  birthdays.py  children.py  inline.py  main_menu.py  (+3 more)
app/db/: models.py  session.py
app/locales/: en.json  ru.json  uz.json
app/scripts/: seed_demo_data.py  send_due_reminders.py
app/services/: admin_service.py  audit_service.py  backup_service.py  backup_trigger.py  child_service.py  excel_error_report_service.py  excel_export_service.py  excel_import_service.py  excel_template_service.py  i18n.py  people_service.py  relationship_service.py  reminder_service.py  reminder_trigger.py  restore_service.py  scheduler_service.py  security_service.py  settings_service.py
tests/: conftest.py  test_admin.py  test_backup_restore_excel.py  test_children.py  test_config.py  test_i18n.py  test_people_repository.py  test_people_service.py  test_person_delete_relationships.py  test_relationships.py  test_reminders.py  test_security.py  test_users.py  test_users_repository.py
(+18 files in other folders)
